argo-events/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-events-ingress
  namespace: argo-events
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: argo-events.flou.dev
    http:
      paths:
      - path: /sportdings
        pathType: ImplementationSpecific
        backend:
          service:
            name: sportdings-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sportdings-frontend
        pathType: ImplementationSpecific
        backend:
          service:
            name: sportdings-frontend-eventsource-eventsource-svc
            port:
              number: 12000
  - host: argo-events.flou.dev
    http:
      paths:
      - path: /blog
        pathType: ImplementationSpecific
        backend:
          service:
            name: blog-eventsource-eventsource-svc
            port:
              number: 12000
  - host: argo-events.flou.dev
    http:
      paths:
      - path: /homepage
        pathType: ImplementationSpecific
        backend:
          service:
            name: homepage-eventsource-eventsource-svc
            port:
              number: 12000
  - host: argo-events.flou.dev
    http:
      paths:
      - path: /damlo
        pathType: ImplementationSpecific
        backend:
          service:
            name: damlo-eventsource-eventsource-svc
            port:
              number: 12000
  - host: argo-events.flou.dev
    http:
      paths:
      - path: /static-server
        pathType: ImplementationSpecific
        backend:
          service:
            name: static-server-eventsource-eventsource-svc
            port:
              number: 12000
  - host: argo-events.flou.dev
    http:
      paths:
      - path: /cypress-executor
        pathType: ImplementationSpecific
        backend:
          service:
            name: cypress-executor-eventsource-eventsource-svc
            port:
              number: 12000
  - host: argo-events.flou.dev
    http:
      paths:
      - path: /base-images
        pathType: ImplementationSpecific
        backend:
          service:
            name: base-images-eventsource-eventsource-svc
            port:
              number: 12000
  - host: argo-events.flou.dev
    http:
      paths:
      - path: /mail-notification
        pathType: ImplementationSpecific
        backend:
          service:
            name: mail-notification-eventsource-eventsource-svc
            port:
              number: 12000
  - host: argo-events.flou.dev
    http:
      paths:
      - path: /songvoter
        pathType: ImplementationSpecific
        backend:
          service:
            name: songvoter-eventsource-eventsource-svc
            port:
              number: 12000
  - host: argo-events.flou.dev
    http:
      paths:
      - path: /kafka-dedup-dotnet
        pathType: ImplementationSpecific
        backend:
          service:
            name: kafka-dedup-dotnet-eventsource-eventsource-svc
            port:
              number: 12000
  - host: argo-events.flou.dev
    http:
      paths:
      - path: /sky-core
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-commands
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-mod
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-player-name
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-pull-request
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-frontend
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-subscriptions
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-flipper
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-tracker
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-mc-connect
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-filter
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-stage-frontend
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-updater
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-settings
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-indexer
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-craft
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-player-name
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-server-manager
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-player
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-sniper
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /sky-api
        pathType: ImplementationSpecific
        backend:
          service:
            name: sky-eventsource-eventsource-svc
            port:
              number: 12000

  - host: argo-events.flou.dev
    http:
      paths:
      - path: /feedback-backend
        pathType: ImplementationSpecific
        backend:
          service:
            name: feedback-eventsource-eventsource-svc
            port:
              number: 12000

  - host: argo-events.flou.dev
    http:
      paths:
      - path: /payment
        pathType: ImplementationSpecific
        backend:
          service:
            name: payment-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /product-provisioner
        pathType: ImplementationSpecific
        backend:
          service:
            name: payment-eventsource-eventsource-svc
            port:
              number: 12000

  - host: argo-events.flou.dev
    http:
      paths:
      - path: /nfl-tip-game
        pathType: ImplementationSpecific
        backend:
          service:
            name: nfl-tip-game-eventsource-eventsource-svc
            port:
              number: 12000

  - host: argo-events.flou.dev
    http:
      paths:
      - path: /kafka-sim
        pathType: ImplementationSpecific
        backend:
          service:
            name: kafka-sim-eventsource-eventsource-svc
            port:
              number: 12000

  - host: argo-events.flou.dev
    http:
      paths:
      - path: /discord-bot-node
        pathType: ImplementationSpecific
        backend:
          service:
            name: discord-bot-node-eventsource-eventsource-svc
            port:
              number: 12000
      - path: /coflnet-bot
        pathType: ImplementationSpecific
        backend:
          service:
            name: discord-bot-node-eventsource-eventsource-svc
            port:
              number: 12000

  - host: argo-events.flou.dev
    http:
      paths:
      - path: /pr-env
        pathType: ImplementationSpecific
        backend:
          service:
            name: pr-env-eventsource-eventsource-svc
            port:
              number: 12000

  - host: argo-events.flou.dev
    http:
      paths:
      - path: /promoter
        pathType: ImplementationSpecific
        backend:
          service:
            name: ci-eventsource-eventsource-svc
            port:
              number: 12000
